fix: Fixed jumpy transition on button click.

--- a/src/Components/Quill/QuillOverrides.css
+++ b/src/Components/Quill/QuillOverrides.css
@@ -19,4 +19,5 @@
 .QuillReadonlyScrollingContainer {
     position: relative;
     width: 100%;
+    margin: 5px;
 }
